--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,21 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movies</title>
+    <script>
+      // Initialize theme before React loads to prevent flash
+      (function() {
+        try {
+          const theme = localStorage.getItem('theme') || 'dark';
+          console.log('Initializing theme:', theme);
+          document.documentElement.classList.remove('dark', 'light');
+          document.documentElement.classList.add(theme);
+          console.log('HTML element classes after init:', document.documentElement.className);
+        } catch (e) {
+          console.error('Theme initialization error:', e);
+          document.documentElement.classList.add('dark');
+        }
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
