--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,20 +9,17 @@
       // Initialize theme before React loads to prevent flash
       (function() {
         try {
-          const theme = localStorage.getItem('theme') || 'dark';
-          console.log('Initializing theme:', theme);
+          const theme = localStorage.getItem('theme') || 'light';
           document.documentElement.classList.remove('dark', 'light');
           document.documentElement.classList.add(theme);
-          console.log('HTML element classes after init:', document.documentElement.className);
         } catch (e) {
-          console.error('Theme initialization error:', e);
-          document.documentElement.classList.add('dark');
+          document.documentElement.classList.add('light');
         }
       })();
     </script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="min-h-screen"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
